@@ -10,6 +10,7 @@
 
 
 Version 4.1.6
+ - Fixed: [ 1958447 ] 4.1.5 "On This Day" block needs simple message (canajun2eh)
  - Added: New block to display _TODO items (fisharebest)
  - Fixed: [ 1947080 ] mediafirewall - fix auto-generated .htaccess file when PGV is in the root directory
  - Changed: Show highlight and thumbnail Media options only to Admin users (canajun2eh)
